// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons Close icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<svg
    aria-labelledby="bui-1"
    class="emotion-0"
    viewBox="0 0 14 14"
  >
    <title
      id="bui-1"
    >
      close icon
    </title>
    <g
      fill="none"
      fill-rule="evenodd"
      transform="translate(-5 -5)"
    >
      <polygon
        fill="#333"
        points="19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Icons Menu icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

<svg
    aria-labelledby="bui-2"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="bui-2"
    >
      menu icon
    </title>
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <path
        d="M3,18 L21,18 L21,16 L3,16 L3,18 L3,18 Z M3,13 L21,13 L21,11 L3,11 L3,13 L3,13 Z M3,6 L3,8 L21,8 L21,6 L3,6 L3,6 Z"
        fill="#333"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Icons Search icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
  display: inline-block;
}

<svg
    aria-labelledby="bui-3"
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <title
      id="bui-3"
    >
      search icon
    </title>
    <g
      fill="#2E2E2E"
      fill-opacity=".87"
      fill-rule="evenodd"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
      />
    </g>
  </svg>
</DocumentFragment>
`;
